sling/task/app/dashboard.css
@import url('https://fonts.googleapis.com/css?family=Orbitron:400');

.job-table {
  width: 100%;
  margin-top: 8px;
  margin-right: 8px;
  margin-bottom: 8px;
}

.channel-table {
  width: calc(100% - 8px);
  margin-top: 8px;
  margin-bottom: 8px;
}

.counter-table {
  margin-top: 8px;
  margin-bottom: 8px;
}

.res {
  padding: 8px;
  width: 200px;
  margin-left: 8px;
  margin-bottom: 8px;
  margin-top: 8px;
  color: #00C000;
  background: black;
  font-family: Orbitron, arial;
  font-size: 12pt;
  border-style: ridge;
  border-color: lightgray;
}

